POS Session Roaming Phase 9: Frontend Cutover (includes phases 5-8)
This commit bundles the remaining phases of the POS Session Roaming feature:
- Phase 5: Shadow-Mode Validation & Metrics
- Phase 6: Terminal LOCKED Status & Lock/Unlock Backend
- Phase 7: Session Transfer Service (Backend)
- Phase 8: Transfer UI & Pilot Branch Enablement
- Phase 9: Frontend Cutover to User-First Resolution

Also includes POS Admin Corrections and other miscellaneous updates.